# clihunter

./: .gitignore  README.md  init.py  pyproject.toml  test.py
clihunter/: cli.py  config.py  database.py  history_parser.py  llm_handler.py  models.py  synonyms_data.py  utils.py
clihunter/search/: dense_search.py
clihunter/temp_test_histories/: test_bash_history.txt  test_fish_history.txt  test_zsh_history.txt
